# koishi-plugin-monitorluna

./: .gitignore  BROWSER_EXTENSION_TODO.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN.md  SECURITY_FIXES.md  package-lock.json  package.json  readme.md  requirements.txt  screenshot-server.py  start-server.bat  tsconfig.json
.github/workflows/: release.yml
browser-extension/: README.md  background.js  manifest.json  monitorluna.user.js  popup.html  popup.js
client/: monitorluna.user.js  pyproject.toml  screenshot-server.py  start-server.bat
lib/: index.d.ts  index.js
run/: README.md  pyproject.toml  screenshot-server.py  start-silent.vbs  start.bat
src/: index.ts
