[project]
name = "monitorluna-agent"
version = "1.0.0"
description = "MonitorLuna Agent - 跨平台监控代理"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pillow>=10.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pystray>=0.19.5; sys_platform == 'win32'",
]
